--- a/app/src/main/res/layout/pageone_item_list.xml
+++ b/app/src/main/res/layout/pageone_item_list.xml
@@ -9,7 +9,7 @@
     android:padding="8dp">
 
     <TextView
-        android:id="@+id/title_listitem"
+        android:id="@+id/comment_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -50,7 +50,7 @@
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title_listitem"
+        app:layout_constraintTop_toBottomOf="@+id/comment_id"
         app:layout_constraintVertical_bias="0.782" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
