--- a/app/src/main/res/layout/activity_note_send.xml
+++ b/app/src/main/res/layout/activity_note_send.xml
@@ -50,10 +50,10 @@
                     android:id="@+id/noteText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     android:background="@null"
                     android:ems="10"
-                    android:hint="내용을 입력하세요"
-                    android:inputType="text" />
+                    android:hint="내용을 입력하세요" />
             </LinearLayout>
         </ScrollView>
 
