--- a/app/src/main/res/layout/pageone_item_list.xml
+++ b/app/src/main/res/layout/pageone_item_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="5dp"
-    android:background="@color/colorPrimary"
+    android:background="@drawable/stroke_down"
     android:padding="8dp">
 
     <TextView
