--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -26,51 +26,88 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.76">
 
-        <EditText
-            android:id="@+id/Id"
-            android:layout_width="253dp"
-            android:layout_height="58dp"
-            android:layout_gravity="center"
-            android:layout_margin="15dp"
-            android:layout_marginTop="150dp"
-            android:layout_marginEnd="35dp"
-            android:layout_marginRight="35dp"
-            android:fontFamily="@font/nanumsquareroundr"
-            android:hint="아이디를 입력하세요"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-        <EditText
-            android:id="@+id/Pw"
-            android:layout_width="253dp"
-            android:layout_height="58dp"
-            android:layout_gravity="center"
-            android:layout_margin="16dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="35dp"
-            android:layout_marginRight="35dp"
-            android:ems="10"
-            android:fontFamily="@font/nanumsquareroundr"
-            android:hint="비밀번호를 입력하세요"
-            android:inputType="textPassword"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/Id" />
+            <EditText
+                android:id="@+id/Id"
+                android:layout_width="170dp"
+                android:layout_height="58dp"
+                android:layout_gravity="center"
+                android:layout_margin="15dp"
+                android:layout_marginTop="150dp"
+                android:layout_marginEnd="35dp"
+                android:layout_marginRight="35dp"
+                android:fontFamily="@font/nanumsquareroundr"
+                android:hint="아이디를 입력하세요"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <EditText
-            android:id="@+id/Nickname"
-            android:layout_width="253dp"
-            android:layout_height="58dp"
-            android:layout_gravity="center"
-            android:layout_margin="16dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="35dp"
-            android:layout_marginRight="35dp"
-            android:ems="10"
-            android:fontFamily="@font/nanumsquareroundr"
-            android:hint="닉네임을 입력하세요"
-            android:inputType="textPersonName"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/Pw" />
+            <Button
+                android:id="@+id/id_checkBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginRight="5dp"
+                android:layout_weight="1"
+                android:text="중복확인" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <EditText
+                android:id="@+id/Pw"
+                android:layout_width="253dp"
+                android:layout_height="58dp"
+                android:layout_gravity="center"
+                android:layout_margin="16dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="35dp"
+                android:layout_marginRight="35dp"
+                android:ems="10"
+                android:fontFamily="@font/nanumsquareroundr"
+                android:hint="비밀번호를 입력하세요"
+                android:inputType="textPassword"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/Id" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/Nickname"
+                android:layout_width="170dp"
+                android:layout_height="58dp"
+                android:layout_gravity="center"
+                android:layout_margin="16dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="35dp"
+                android:layout_marginRight="35dp"
+                android:ems="10"
+                android:fontFamily="@font/nanumsquareroundr"
+                android:hint="닉네임을 입력하세요"
+                android:inputType="textPersonName"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/Pw" />
+
+            <Button
+                android:id="@+id/nickname_checkBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginRight="5dp"
+                android:layout_weight="1"
+                android:text="중복확인" />
+        </LinearLayout>
 
         <Button
             android:id="@+id/Signup_btn"
