--- a/app/src/main/res/layout/fragment_page_two.xml
+++ b/app/src/main/res/layout/fragment_page_two.xml
@@ -51,14 +51,14 @@
 
                         <Button
                             android:id="@+id/write"
-                            android:layout_width="206dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:text="글쓰기" />
 
                         <Button
                             android:id="@+id/logout_btn"
-                            android:layout_width="114dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:text="로그아웃" />
